--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,7 @@ body {
     background-position: center;
     background-size: cover;
     margin-bottom: 116px;
-    padding: 36px 0 120px;
+    padding: 230px 0 120px;
     position: relative;
 
     &__container {
@@ -84,7 +84,10 @@ body {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid $color_border;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    max-width: 1200px;
+    top: 38px;
     z-index: 1;
     margin-bottom: 130px;
 
