--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,6 @@
 @import 'reset';
 @import 'mixins';
-
-//переменные
-$color: #FFF;
-$color_border: #BABBC5;
-$background_btn: #FF4343;
-$color_nav: #E71414;
+@import 'variables';
 
 body {
     @include font(18px, 21px, 'Raleway', 400);
@@ -18,6 +13,19 @@ body {
     margin-bottom: 116px;
     padding: 230px 0 120px;
     position: relative;
+
+    @media only screen and (max-width: 1024px) {
+        & {
+            padding-bottom: 126px;
+            margin-bottom: 78px;
+        } 
+    }
+    @media only screen and (max-width: 767px) {
+        & {
+            padding: 106px 0 52px;
+            margin-bottom: 40px;
+        }
+    }
 
     &__container {
         @include container();
@@ -40,45 +48,42 @@ body {
         margin-bottom: 31px;
         position: relative;
         z-index: 1;
+
         @include font(64px, 75px,'Raleway', 900);
+        @media only screen and (max-width: 1024px) {
+            & {
+                @include font(48px, 56px,'Raleway', 900);
+                margin-bottom: 62px;
+            }
+        }
+        @media only screen and (max-width: 767px) {
+            & {
+                @include font(36px, 42px,'Raleway', 900);
+                margin-bottom: 33px;
+            }
+        }
     }
     &__text {
         color: $color;
         text-align: center;
-        @include font(24px, 28px,'Raleway', 400);
         margin-bottom: 80px;
         position: relative;
         z-index: 1;
-    }
+        @include font(24px, 28px,'Raleway', 400);
 
-    @media only screen and (max-width: 1024px) {
-        & {
-            padding-bottom: 126px;
-            margin-bottom: 78px;
+        @media only screen and (max-width: 1024px) {
+            & {
+                @include font(18px, 21px,'Raleway', 400);
+                margin-bottom: 89px;
+            }
         }
-        &__title {
-            @include font(48px, 56px,'Raleway', 900);
-            margin-bottom: 62px;
+        @media only screen and (max-width: 767px) {
+            & {
+                @include font(14px, 16px,'Raleway', 400);
+                margin-bottom: 50px;
+            }
         }
-        &__text {
-            @include font(18px, 21px,'Raleway', 400);
-            margin-bottom: 89px;
-        }
-    }
-    @media only screen and (max-width: 767px) {
-        & {
-            padding: 106px 0 52px;
-            margin-bottom: 40px;
-        }
-        &__title {
-            @include font(36px, 42px,'Raleway', 900);
-            margin-bottom: 33px;
-        }
-        &__text {
-            @include font(14px, 16px,'Raleway', 400);
-            margin-bottom: 50px;
-        }
-    }
+    } 
 }
 .header {
     position: fixed;
@@ -87,24 +92,11 @@ body {
     z-index: 1;
     width: 100%;
 
-    &__container {
-        @include container();
-        border-bottom: 1px solid $color_border;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    &__burger {
-        & svg {
-            display: none;
-        }
-    }
-
     @media only screen and (max-width: 1024px) {
-    & {
-        margin-bottom: 157px;
+        & {
+            margin-bottom: 157px;
+            }
         }
-    }
     @media only screen and (max-width: 767px) {
         & {
             padding: 22px 0;
@@ -112,13 +104,29 @@ body {
             border-bottom: none;
             margin-bottom: 0;
         }
-        &__burger {
-           & svg {
-            display: flex;
-            } 
+    }
+
+    &__container {
+        @include container();
+        border-bottom: 1px solid $color_border;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        @media only screen and (max-width: 767px) {
+            & {
+                border-bottom: none;
+            }
         }
-        &__container {
-            border-bottom: none;
+    }
+    &__burger {
+        & svg {
+            display: none;
+        }
+        @media only screen and (max-width: 767px) {
+            & svg {
+                display: flex;
+                } 
         }
     }
 }
@@ -133,24 +141,32 @@ body {
     &__link {
         color: $color;
         text-align: center;
-        @include font(13px, 15px,'Raleway', 700);
         text-transform: uppercase;
         padding: 35px 5px;
         display: inline-block;
         min-width: 134px;
         padding-bottom: 36px;
         border-bottom: 3px solid transparent;
+        @include font(13px, 15px,'Raleway', 700);
+
+        @media only screen and (max-width: 1024px) {
+            & {
+                padding-left: 30px;
+                padding-right: 30px;
+                @include font(12px, 14px,'Raleway', 700);
+            }
+        }
+        @media only screen and (max-width: 992px) {
+            & {
+                padding-left: 15px;
+                padding-right: 15px;
+                min-width: 124px;
+            }
+        }
     }
     &__link:active {
         border-bottom: 3px solid $color_nav;
         color: $color_nav;
-    }
-    @media only screen and (max-width: 1024px) {
-        &__link {
-            padding-left: 30px;
-            padding-right: 30px;
-            @include font(12px, 14px,'Raleway', 700);
-        }
     }
     @media only screen and (max-width: 767px) {
         & {
@@ -162,7 +178,6 @@ body {
 .btn {
     color: $color;
     text-align: center;
-    @include font(24px, 28px,'Raleway', 900);
     text-transform: uppercase;
     padding: 26px 70px;
     background-color: $background_btn;
@@ -173,14 +188,7 @@ body {
     margin: 0 auto;
     cursor: pointer;
 
-    &:hover {
-        background-color: $color_nav;
-    }
-    &:active {
-        background: $background_btn;
-        box-shadow: 4px 4px 30px 0px $background_btn;
-    }
-
+    @include font(24px, 28px,'Raleway', 900);
     @media only screen and (max-width: 1024px) {
         & {
             padding: 26px 55px;
@@ -191,6 +199,14 @@ body {
             padding: 16px 38px;
             width: 100%;
         }
+    }
+
+    &:hover {
+        background-color: $color_nav;
+    }
+    &:active {
+        background: $background_btn;
+        box-shadow: 4px 4px 30px 0px $background_btn;
     }
 }
 
