feat features block

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,7 @@
 //переменные
 $color: #FFF;
+$color_title: #2D3033;
+$color__text: #6C7279;
 $color_border: #BABBC5;
 $background_btn: #FF4343;
 $color_nav: #E71414;
