--- a/src/style.scss
+++ b/src/style.scss
@@ -231,3 +231,61 @@ body {
         }  
     }
 }
+// features
+.features {
+    &__container {
+        @include container();
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 30px;
+        row-gap: 88px;
+        margin-bottom: 133px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 80px;
+            column-gap: 20px;
+            row-gap: 50px;
+        }
+        @media only screen and (max-width: 767px) {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 35px;
+            row-gap: 42px;
+        }
+    }
+    &__wrapper {
+        text-align: center;  
+    }
+    &__wrapper-svg {
+        margin-bottom: 29px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 25px;
+            svg {
+                width: 85px;
+                height: 85px;
+            }
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 21px;
+            svg {
+                width: 75px;
+                height: 75px;
+            }
+        }
+    }
+    &__title {
+        color: $color_title;
+        @include font(24px, 28px,'Raleway', 900);
+        text-transform: uppercase;
+        margin-bottom: 20px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 4px;
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 2px;
+        }
+    }
+    &__text {
+        color: $color__text;
+        @include font(18px, 21px,'Raleway', 400);
+    }
+}
