feat works block, fix features block

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,4 +4,6 @@ $color_title: #2D3033;
 $color__text: #6C7279;
 $color_border: #BABBC5;
 $background_btn: #FF4343;
+$background_img_hover: rgba(255, 67, 67, 0.80);
+$background_img_active: rgba(185, 12, 12, 0.80);
 $color_nav: #E71414;
