--- a/src/style.scss
+++ b/src/style.scss
@@ -233,22 +233,26 @@ body {
 }
 // features
 .features {
+    margin-bottom: 133px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 80px;
+    }
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 35px;
+    }
     &__container {
         @include container();
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 30px;
         row-gap: 88px;
-        margin-bottom: 133px;
         @media only screen and (max-width: 1024px) {
-            margin-bottom: 80px;
             column-gap: 20px;
             row-gap: 50px;
         }
         @media only screen and (max-width: 767px) {
             display: flex;
             flex-direction: column;
-            margin-bottom: 35px;
             row-gap: 42px;
         }
     }
@@ -279,6 +283,7 @@ body {
         margin-bottom: 20px;
         @media only screen and (max-width: 1024px) {
             margin-bottom: 4px;
+            @include font(18px, 21px,'Raleway', 900);
         }
         @media only screen and (max-width: 767px) {
             margin-bottom: 2px;
@@ -287,5 +292,79 @@ body {
     &__text {
         color: $color__text;
         @include font(18px, 21px,'Raleway', 400);
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 400);
+        }
+    }
+}
+// works
+.works {
+    margin-bottom: 114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 78px;
+    }
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 35px;
+    }
+    &__container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        @media only screen and (max-width: 767px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    &__wrapper-image {
+        position: relative;
+        padding-top: 100%;
+    }
+    &__image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    &__wrapper-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid $color;
+        background-color: $background_img_hover;
+        display: flex;
+        flex-direction: column;
+        row-gap: 21px;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        &:hover {
+            opacity: 1;
+        }
+        &:active {
+            background-color: $background_img_active;
+        }
+    }
+    &__title {
+        color: $color;
+        @include font(24px, 28px,'Raleway', 900);
+        text-transform: uppercase;
+        margin-bottom: 20px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 13px;
+            @include font(18px, 21px,'Raleway', 900);
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 5px;
+        }
+    }
+    &__text {
+        color: $color;
+        @include font(18px, 21px,'Raleway', 400);
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 400);
+        }
     }
 }
