--- a/src/style.scss
+++ b/src/style.scss
@@ -368,3 +368,96 @@ body {
         }
     }
 }
+.our-team {
+    margin-bottom: 114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 78px;
+    }
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 34px;
+    }
+    &__container {
+        @include container();
+        display: flex;
+        column-gap: 30px;
+        @media only screen and (max-width: 767px) {
+            flex-direction: column;
+            row-gap: 50px;
+        }
+    }
+    &__info {
+        display: flex;
+        flex-direction: column;
+    }
+    &__wrapper-image {
+        margin-bottom: 30px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 25px;
+        }
+    }
+    &__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    &__title {
+        color: $color_title;
+        @include font(24px, 28px,'Raleway', 700);
+        text-transform: capitalize;
+        margin-bottom: 5px;
+        @media only screen and (max-width: 1024px) {
+            @include font(18px, 21px,'Raleway', 700);
+        }
+    }
+    &__subtitle {
+        color: $color__subtitle;
+        @include font(18px, 21px,'Raleway', 400);
+        text-transform: uppercase;
+        margin-bottom: 18px;
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 400);
+            margin-bottom: 22px;
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 38px;
+        }
+    }
+    &__text {
+        color: $color__text;
+        @include font(18px, 21px,'Raleway', 400);
+        margin-bottom: 38px;
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 400);
+            margin-bottom: 39px;
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 55px;
+        }
+    }
+}
+.wrapper__social-media {
+    display: flex;
+    column-gap: 6px;
+    &__facebook, 
+    &__twitter,
+    &__linkedin {
+        border: 1px solid $color_border-icon;
+        width: 39px;
+        height: 39px;
+        @media only screen and (max-width: 1024px) {
+            width: 32px;
+            height: 32px;
+        }
+        @media only screen and (max-width: 767px) {
+            width: 39px;
+            height: 39px;
+        }
+
+    }
+}
+.facebook:hover path,
+.twitter:hover path,
+.linkedin:hover path {
+    fill: $color_nav;
+}
