--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,8 +2,10 @@
 $color: #FFF;
 $color_title: #2D3033;
 $color__text: #6C7279;
+$color__subtitle: #FF4343;
 $color_border: #BABBC5;
 $background_btn: #FF4343;
 $background_img_hover: rgba(255, 67, 67, 0.80);
 $background_img_active: rgba(185, 12, 12, 0.80);
 $color_nav: #E71414;
+$color_border-icon: #C6CBCD;
