--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,12 @@ body {
 
     &__container {
         @include container();
+
+        @media only screen and (max-width: 767px) {
+            &.hide {
+                opacity: 0;
+            }
+        }
     }
     &::before {
         content: '';
@@ -117,27 +123,33 @@ body {
             & {
                 border-bottom: none;
             }
+
         }
     }
     &__burger {
         & svg {
             display: none;
-        }
-        @media only screen and (max-width: 767px) {
-            & svg {
-                display: flex;
+            position: relative;
+            z-index: 1;
+            @media only screen and (max-width: 767px) {
+                & {
+                    display: block;
+                    
                 } 
+            }
         }
+    }
+    &.scrolled {
+        background-color: #2f3047;
     }
 }
 .nav {
+
     &__list {
         display: flex;
         align-items: center;
     }
-    &__link:hover {
-        border-bottom: 3px solid $color_border;
-    }
+    
     &__link {
         color: $color;
         text-align: center;
@@ -148,6 +160,7 @@ body {
         padding-bottom: 36px;
         border-bottom: 3px solid transparent;
         @include font(13px, 15px,'Raleway', 700);
+        transition: all .3s linear;
 
         @media only screen and (max-width: 1024px) {
             & {
@@ -163,14 +176,36 @@ body {
                 min-width: 124px;
             }
         }
-    }
-    &__link:active {
-        border-bottom: 3px solid $color_nav;
-        color: $color_nav;
+        &:hover {
+            border-bottom: 3px solid $color_border;
+        }
+        &:active {
+            border-bottom: 3px solid $color_nav;
+            color: $color_nav;
+        }
     }
     @media only screen and (max-width: 767px) {
         & {
             display: none;
+        }
+        &.open {
+            display: block;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            padding: 84px 20px 20px;
+
+            .nav__list {
+                display: block;
+                
+                .nav__link {
+                    display: block;
+                    text-align: left;
+                    padding: 24px 0;
+                }
+            }
         }
     }
 }
@@ -187,6 +222,7 @@ body {
     display: block;
     margin: 0 auto;
     cursor: pointer;
+    transition: all .3s linear;
 
     @include font(24px, 28px,'Raleway', 900);
     @media only screen and (max-width: 1024px) {
@@ -213,6 +249,7 @@ body {
 .link__logo {
     display: flex;
     align-items: center;
+    z-index: 1;
 
     @media only screen and (max-width: 1024px) {
         & {
@@ -309,6 +346,7 @@ body {
     &__container {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+        gap: 2px;
         @media only screen and (max-width: 767px) {
             grid-template-columns: repeat(2, 1fr);
         }
@@ -332,7 +370,6 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
-        border: 2px solid $color;
         background-color: $background_img_hover;
         display: flex;
         flex-direction: column;
@@ -340,6 +377,7 @@ body {
         justify-content: center;
         align-items: center;
         opacity: 0;
+        transition: all .3s linear;
         &:hover {
             opacity: 1;
         }
@@ -456,8 +494,20 @@ body {
 
     }
 }
-.facebook:hover path,
-.twitter:hover path,
-.linkedin:hover path {
-    fill: $color_nav;
+.facebook,
+.linkedin,
+.twitter {
+    transition: fill .3s linear;
+    &:hover {
+        border: 1px solid $color_nav;
+    }
+    &:active {
+        border: 1px solid $background_img_active;
+    }
+    &:hover path {
+        fill: $color_nav;
+    }
+    &:active path {
+        fill: $background_img_active;
+    }
 }
