--- a/src/style.scss
+++ b/src/style.scss
@@ -538,32 +538,32 @@ body {
     display: flex;
     column-gap: 6px;
 }
-    .facebook__link, 
-    .twitter__link,
-    .linkedin__link {
-        border: 1px solid $color_border-icon;
+.facebook__link, 
+.twitter__link,
+.linkedin__link {
+    border: 1px solid $color_border-icon;
+    width: 39px;
+    height: 39px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: fill .3s linear;
+    &:hover {
+        border: 1px solid $color_nav;
+    }
+    &:active {
+        border: 1px solid $background_img_active;
+    }
+    @media only screen and (max-width: 1024px) {
+        width: 32px;
+        height: 32px;
+    }
+    @media only screen and (max-width: 767px) {
         width: 39px;
         height: 39px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: fill .3s linear;
-        &:hover {
-            border: 1px solid $color_nav;
-        }
-        &:active {
-            border: 1px solid $background_img_active;
-        }
-        @media only screen and (max-width: 1024px) {
-            width: 32px;
-            height: 32px;
-        }
-        @media only screen and (max-width: 767px) {
-            width: 39px;
-            height: 39px;
-        }
-
     }
+
+}
 
 .facebook,
 .linkedin,
@@ -575,4 +575,207 @@ body {
     &:active path {
         fill: $background_img_active;
     }
+}
+// testimonials
+.testimonials {
+    
+    margin-bottom: 114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 77px;
+    }
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 45px;
+    }
+    &__container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 31px;
+        @media only screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+            margin-bottom: 24px;
+        }
+    }
+    &__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    &__info {
+        padding: 133px 15px 116px;
+        background-color: $background_testimonials;
+        @media only screen and (max-width: 1024px) {
+            padding: 61px 15px 110px;
+        }
+        @media only screen and (max-width: 767px) {
+            padding: 17px 20px 95px;
+        }
+    }
+    &__comment {
+        color: $color;
+        @include font(36px, 49px,'Cardo', 400);
+        font-style: italic;
+        text-transform: capitalize;
+        margin: 0 auto 17px;
+        max-width: 471px;
+        @media only screen and (max-width: 1024px) {
+            @include font(24px, 32px,'Cardo', 400);
+            margin-bottom: 14px;
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 23px;
+        }
+    }
+    &__autor {
+        color: $color;
+        @include font(13px, 15px,'Raleway', 700);
+        text-transform: uppercase;
+        max-width: 471px;
+        margin: 0 auto;
+        @media only screen and (max-width: 1024px) {
+            @include font(12px, 14px,'Raleway', 700);
+            
+        }
+    }
+    &__wrapper-svg {
+        text-align: center;
+    }
+}
+// download
+.download {
+    margin-bottom:  114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 78px;
+    }
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 45px;
+    }
+    &__container {
+        @include container();
+    }
+    &__title {
+        text-align: center;
+        color: $color_2;
+        @include font(30px, 35px,'Raleway', 500);
+        margin-bottom: 22px;
+        @media only screen and (max-width: 1024px) {
+            @include font(24px, 28px,'Raleway', 500);
+            margin-bottom: 21px;
+        }
+        @media only screen and (max-width: 767px) {
+            @include font(18px, 21px,'Raleway', 500);
+            margin-bottom: 32px;
+        }
+    }
+    &__text {
+        text-align: center;
+        color: $color_2;
+        @include font(18px, 21px,'Raleway', 700);
+        text-transform: uppercase;
+        margin-bottom: 48px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 43px;
+            @include font(14px, 16px,'Raleway', 700);
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 11px;
+            @include font(13px, 15px,'Raleway', 700);
+        }
+    }
+    &__btn {
+        @media only screen and (max-width: 1024px) {
+            @include font(18px, 21px,'Raleway', 900);
+        }
+    }
+}
+// footer
+.footer {
+    padding-top: 71px;
+    background-color: $background_footer;
+    @media only screen and (max-width: 1024px) {
+        padding-top: 46px;
+    }
+    @media only screen and (max-width: 767px) {
+        padding-top: 34px;
+    }
+    &__container {
+        @include container();
+    }
+    &__wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        @media only screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+            row-gap: 59px;
+        }
+    }
+    &__title {
+        color: $color;
+        @include font(18px, 21px,'Raleway', 700);
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 29px;
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 700);
+            margin-bottom: 18px;
+        }
+        @media only screen and (max-width: 767px) {
+            margin-bottom: 34px;
+        }
+    }
+    &__text {
+        color: $color;
+        text-align: center;
+        @include font(18px, 21px,'Raleway', 400);
+        text-transform: capitalize;
+        margin-bottom: 67px;
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 400);
+            margin-bottom: 43px;
+        }
+        @media only screen and (max-width: 767px) {
+            max-width: 280px;
+            width: 100%;
+            margin: 0 auto 33px;
+        }
+    }
+    &__copyright-wrapper {
+        background-color: $background_footer_2;
+        padding: 24px 15px;
+        @media only screen and (max-width: 1024px) {
+            padding: 14px 15px;
+        }
+        @media only screen and (max-width: 767px) {
+            padding: 29px 20px;
+        }
+    }
+    &__copyright {
+        width: 100%;
+        max-width: 370px;
+        text-align: center;
+        margin: 0 auto;
+        color: $color_copyright;
+        @include font(18px, 21px,'Raleway', 400);
+        text-transform: capitalize;
+        @media only screen and (max-width: 1024px) {
+            @include font(14px, 16px,'Raleway', 400);
+        }
+        span {
+            color: $color;
+        }
+    }
+}
+.title__social-media {
+    margin-bottom: 49px; 
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 32px;
+    }
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 36.71px;
+    }
+}
+.social-media {
+    display: flex;
+    justify-content: center;
+    column-gap: 26px;
 }
