--- a/src/style.scss
+++ b/src/style.scss
@@ -130,17 +130,6 @@ body {
         }
     }
     &__burger {
-        // & svg {
-        //     display: none;
-        //     position: relative;
-        //     z-index: 1;
-        //     @media only screen and (max-width: 767px) {
-        //         & {
-        //             display: block;
-                    
-        //         } 
-        //     }
-        // }
         display: none;
         z-index: 2;
         width: 24px;
@@ -323,17 +312,20 @@ body {
 }
 // features
 .features {
+    scroll-margin-top: 100px;
+    margin-bottom: 133px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 80px;
+    }
     &__container {
         @include container();
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 30px;
         row-gap: 88px;
-        margin-bottom: 133px;
         @media only screen and (max-width: 1024px) {
             column-gap: 20px;
             row-gap: 50px;
-            margin-bottom: 80px;
         }
         @media only screen and (max-width: 767px) {
             grid-template-columns: 1fr;
@@ -394,6 +386,7 @@ body {
 }
 // works
 .works {
+    scroll-margin-top: 90px;
     margin-bottom: 114px;
     @media only screen and (max-width: 1024px) {
         margin-bottom: 78px;
@@ -465,6 +458,7 @@ body {
     }
 }
 .our-team {
+    scroll-margin-top: 100px;
     margin-bottom: 114px;
     @media only screen and (max-width: 1024px) {
         margin-bottom: 78px;
@@ -547,12 +541,27 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: fill .3s linear;
+    transition: all .3s linear;
     &:hover {
-        border: 1px solid $color_nav;
+        border: 1px solid $color_nav; 
     }
     &:active {
         border: 1px solid $background_img_active;
+    }
+    &:hover  {
+        svg {
+            path {
+                fill: $color_nav;
+            }
+            
+        }
+    }
+    &:active {
+        svg {
+            path {
+                fill: $background_img_active;
+        } 
+    } 
     }
     @media only screen and (max-width: 1024px) {
         width: 32px;
@@ -562,23 +571,11 @@ body {
         width: 39px;
         height: 39px;
     }
-
 }
 
-.facebook,
-.linkedin,
-.twitter {
-    transition: fill .3s linear; 
-    &:hover path {
-        fill: $color_nav;
-    }
-    &:active path {
-        fill: $background_img_active;
-    }
-}
 // testimonials
 .testimonials {
-    
+    scroll-margin-top: 100px;
     margin-bottom: 114px;
     @media only screen and (max-width: 1024px) {
         margin-bottom: 77px;
@@ -643,7 +640,7 @@ body {
 }
 // download
 .download {
-    margin-bottom:  114px;
+    margin-bottom: 114px;
     @media only screen and (max-width: 1024px) {
         margin-bottom: 78px;
     }
