--- a/src/style.scss
+++ b/src/style.scss
@@ -561,6 +561,7 @@ body {
         svg {
             path {
                 fill: $background_img_active;
+                transition: fill .3s linear;
         } 
     } 
     }
@@ -593,7 +594,13 @@ body {
             margin-bottom: 24px;
         }
     }
+    &__wrapper-image {
+        position: relative;
+    }
     &__image {
+        position: absolute;
+        left: 0;
+        top: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -698,13 +705,17 @@ body {
     }
     &__container {
         @include container();
-    }
-    &__wrapper {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        column-gap: 10px;
+        margin-bottom: 67px;
+        @media only screen and (max-width: 1024px) {
+            margin-bottom: 43px;
+        }
         @media only screen and (max-width: 767px) {
             grid-template-columns: 1fr;
             row-gap: 59px;
+            margin-bottom: 33px;
         }
     }
     &__title {
@@ -726,15 +737,12 @@ body {
         text-align: center;
         @include font(18px, 21px,'Raleway', 400);
         text-transform: capitalize;
-        margin-bottom: 67px;
         @media only screen and (max-width: 1024px) {
             @include font(14px, 16px,'Raleway', 400);
-            margin-bottom: 43px;
         }
         @media only screen and (max-width: 767px) {
-            max-width: 280px;
             width: 100%;
-            margin: 0 auto 33px;
+            margin: 0 auto;
         }
     }
     &__copyright-wrapper {
