--- a/src/variables.scss
+++ b/src/variables.scss
@@ -14,3 +14,5 @@ $color_border-icon: #C6CBCD;
 $background_footer: #353C65;
 $background_footer_2: #2C3154;
 $background_testimonials: #5C3249;
+$background_swiper: #7E5D6F;
+$background_burger: #252B49;
