--- a/src/style.scss
+++ b/src/style.scss
@@ -150,6 +150,9 @@ body {
     &.scrolled {
         background-color: #2f3047;
         z-index: 3;
+        .header__container {
+            border-bottom: none;
+        }
     }
     &__burger-item {
         position: absolute;
